[package]
name = "ord-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
anyhow = "1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/api.rs"
